# editions

./: .gitignore  README.md  manage  pyproject.toml  requirements.txt
editions/: index.yaml  schema.json
editions/Krieger JP/Einsamkeit du Qual der Herzen/: Krieger JP - An die Einsamkeit - transposed Bb.musicxml
editions/albert-h/: README.md  index.yaml
editions/albert-h/arien-1-01/: README.md
editions/albert-h/arien-1-02/: README.md
editions/albert_h/albert_h-arien-1_01/: albert_h-arien-1_01-vive_deo_soli.mscz
editions/albert_h/albert_h-arien-1_02/: albert_h-arien-1_02-ploratus_nimios_sanctorum.mscz
editions/bach-cpe/: README.md  index.yaml
editions/bach-cpe/wq194-7-prufung-am-abend/: README.md  (+1 more)
editions/buxtehude-d/: README.md  index.yaml
editions/carissimi-g/: README.md  index.yaml
editions/erlebach-ph/: README.md  index.yaml
editions/gluck-cw/: README.md  index.yaml
editions/krieger-jp/: README.md  index.yaml
editions/landi-s/: README.md  index.yaml
editions/melani-a/: README.md  index.yaml
editions/purcell-h/: README.md  index.yaml
editions/sweelinck-jp/: README.md  index.yaml
scores/albert_h/: config.yaml
src/: __init__.py  cli.py  collection.py  extract_cli.py  index_cli.py  indexer.py  metadata.py  musicxml_metadata.py  readme.py  schema_cli.py  test_collection.py
src/tests/: test_collection.py  test_indexer.py  test_metadata.py
styles/: garamond-emmentaler-albert.mss  garamond-emmentaler-cpe_bach.mss  garamond-emmentaler-orchestral.mss  single-song-big-title.doricolib  single-song.doricolib
(+57 files in other folders)
